add index to articles and built view

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,10 @@
 
 <p>
   <strong>Title:</strong>
-  <%= @articles.title %>
+  <%= @article.title %>
 </p>
 
 <p>
   <strong>Text:</strong>
-  <%= @articles.text %>
+  <%= @article.text %>
 </p>
