new views/methods for new,create,update articles

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,3 +1,4 @@
+<h1><%= @article.title %></h1>
 
 <p>
   <strong>Title:</strong>
@@ -8,3 +9,5 @@
   <strong>Text:</strong>
   <%= @article.text %>
 </p>
+
+<%= link_to 'Back', articles_path %>
