--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>New Article</h1>
+<h1>Edit Article</h1>
 
-<%=form_with scope: :article, url: articles_path, local: true do |form| %>
+<%= form_with(model: @article, local: true) do |form| %>
 
 <% if @article.errors.any? %>
   <div id="error_explanation">
@@ -14,21 +14,22 @@
       </ul>
     </div>
  <% end %>
+       
 
-<p>
-  <%= form.label :title %><br>
-  <%= form.text_field :title %>
-</p>
-
-<p>
-  <%= form.label :text %><br>
-  <%= form.text_field :text %>
-</p>
-
-<p>
-  <%= form.submit %>
-<p>
-
+  <p>
+    <%= form.label :title %><br>
+    <%= form.text_field :title %>
+  </p>
+ 
+  <p>
+    <%= form.label :text %><br>
+    <%= form.text_area :text %>
+  </p>
+ 
+  <p>
+    <%= form.submit %>
+  </p>
+ 
 <% end %>
-
+ 
 <%= link_to 'Back', articles_path %>
