--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,7 +6,7 @@
   <tr>
     <th>Title</th>
     <th>Text</th>
-    <th>Options</th>
+    <th colspan="3">Options</th>
   </tr>
 
 <% @articles.each do |article| %>
@@ -15,6 +15,9 @@
     <td><%= article.text %></td>
     <td><%= link_to 'Show', article_path(article) %></td>
     <td><%= link_to 'Edit', edit_article_path(article) %></td>
+    <td><%= link_to 'Delete', article_path(article),
+            method: :delete,
+            data: { confirm: 'Are you sure?' } %></td>
   </tr>
  <% end %>
 </table>
