--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -21,23 +21,12 @@
     <strong>Comment:</strong>
       <%= comment.body %>
     </p>
+    <p><%= link_to 'Delete', [comment.article, comment],
+            method: :delete,
+            data: { confirm: 'Are you sure?' } %></p>
   <% end %>
 
-
-<h2>Add a Comment</h2>
-<%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
-  <p>
-    <%= form.label :commenter %><br>
-    <%= form.text_field :commenter %>
-  </p>
-  <p>
-    <%= form.label :body %><br>
-    <%= form.text_area :body %>  
-  </p>
-  <p>
-    <%= form.submit %>
-  </p>
-<% end %>
+<%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
