bootstrap tested and now working properly

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing of Articles</h1>
+<h1 class="jumbotron">Listing of Articles</h1>
 
 <p><%= link_to 'New article', new_article_path %></p>
 
