--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: @article, local: true) do |form| %>
+<%= bootstrap_form_with(model: @article, local: true) do |form| %>
 
 <% if @article.errors.any? %>
   <div id="error_explanation">
@@ -13,7 +13,6 @@
     </div>
  <% end %>
        
-
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
