--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,5 @@
 <h2>Add a Comment</h2>
-<%= form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
+<%= bootstrap_form_with(model: [ @article, @article.comments.build ], local: true) do |form| %>
   <p>
     <%= form.label :commenter %><br>
     <%= form.text_field :commenter %>
