--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,6 @@
-<h1><%= @article.title %></h1>
+<div class="container">
+ <div class="row">
+    <div class="col-md-4">
 
 <p>
   <strong>Title:</strong>
@@ -10,7 +12,7 @@
   <%= @article.text %>
 </p>
 
-<h2>Comments:</h2>
+<h2>Comments:</h2><br>
 <% @article.comments.each do |comment| %>
   <p>
     <strong>Commenter:</strong>
@@ -25,8 +27,12 @@
             method: :delete,
             data: { confirm: 'Are you sure?' } %></p>
   <% end %>
-
-<%= render 'comments/form' %>
+ 
+      <%= render 'comments/form' %>
 
 <%= link_to 'Edit', edit_article_path(@article) %> |
 <%= link_to 'Back', articles_path %>
+
+</div>
+</div>
+</div>
