--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,11 @@
-<h1>New Article</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-md-4">
+        <h1>New Article</h1>
 
-<%= render 'form' %>
+        <%= render 'form' %>
 
-<%= link_to 'Back', articles_path %>
+        <%= link_to 'Back', articles_path %>
+    </div>
+  </div>
+</div>
