--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,38 +1,32 @@
 <div class="container">
- <div class="row">
+  <div class="row">
     <div class="col-md-4">
-
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Text:</strong>
-  <%= @article.text %>
-</p>
-
-<h2>Comments:</h2><br>
-<% @article.comments.each do |comment| %>
-  <p>
-    <strong>Commenter:</strong>
-    <%= comment.commenter %>
-  </p>
-
-  <p>
-    <strong>Comment:</strong>
-      <%= comment.body %>
-    </p>
-    <p><%= link_to 'Delete', [comment.article, comment],
+      <p>
+        <strong>Title:</strong>
+        <%= @article.title %>
+      </p>
+      <p>
+        <strong>Text:</strong>
+        <%= @article.text %>
+      </p>
+      <h2>Comments:</h2>
+      <br>
+      <% @article.comments.each do |comment| %>
+        <p>
+          <strong>Commenter:</strong>
+          <%= comment.commenter %>
+        </p>
+        <p>
+          <strong>Comment:</strong>
+          <%= comment.body %>
+        </p>
+        <p><%= link_to 'Delete', [comment.article, comment],
             method: :delete,
             data: { confirm: 'Are you sure?' } %></p>
-  <% end %>
- 
+      <% end %>
       <%= render 'comments/form' %>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
-
-</div>
-</div>
+      <%= link_to 'Edit', edit_article_path(@article) %> |
+      <%= link_to 'Back', articles_path %>
+    </div>
+  </div>
 </div>
