--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,12 +1,13 @@
 <h1 class="jumbotron">Listing of Articles</h1>
 <p><%= link_to 'New article', new_article_path %></p>
-<table>
-  <tr>
-    <th>Title</th>
-    <th>Text</th>
-    <th colspan="3">Options</th>
-  </tr>
-  <% @articles.each do |article| %>
+<div class="table-responsive">
+  <table class="table">
+    <tr>
+      <th>Title</th>
+      <th>Text</th>
+      <th colspan="3">Options</th>
+    </tr>
+    <% @articles.each do |article| %>
     <tr>
       <td><%= article.title %></td>
       <td><%= article.text %></td>
@@ -16,5 +17,6 @@
             method: :delete,
             data: { confirm: 'Are you sure?' } %></td>
     </tr>
-  <% end %>
-</table>
+    <% end %>
+  </table>
+</div>
