--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,22 +1,25 @@
 <h1 class="jumbotron">Listing of Articles</h1>
-<p><%= link_to 'New article', new_article_path %></p>
-<div class="table-responsive">
-  <table class="table">
-    <tr>
-      <th>Title</th>
-      <th>Text</th>
-      <th colspan="3">Options</th>
-    </tr>
-    <% @articles.each do |article| %>
-    <tr>
-      <td><%= article.title %></td>
-      <td><%= article.text %></td>
-      <td><%= link_to 'Show', article_path(article) %></td>
-      <td><%= link_to 'Edit', edit_article_path(article) %></td>
-      <td><%= link_to 'Delete', article_path(article),
+<div class="container">
+  <div class="col-md-6">
+    <p><%= link_to 'New Article', new_article_path %></p>
+    <div class="table-responsive">
+      <table class="table">
+        <tr>
+          <th>Title</th>
+          <th>Text</th>
+          <th style="text-align: center">Options</th>
+        </tr>
+        <% @articles.each do |article| %>
+        <tr>
+          <td><%= link_to article.title, article_path(article) %></td>
+          <td><%= article.text %></td>
+          <td style="text-align: center"><%= link_to 'Edit', edit_article_path(article) %>&nbsp;
+            <%= link_to 'Delete', article_path(article),
             method: :delete,
             data: { confirm: 'Are you sure?' } %></td>
-    </tr>
-    <% end %>
-  </table>
+        </tr>
+        <% end %>
+      </table>
+    </div>
+  </div>
 </div>
