--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,25 +1,23 @@
 <h1 class="jumbotron">Listing of Articles</h1>
-<div class="container">
-  <div class="col-md-6">
-    <p><%= link_to 'New Article', new_article_path %></p>
-    <div class="table-responsive">
-      <table class="table">
-        <tr>
-          <th>Title</th>
-          <th>Text</th>
-          <th style="text-align: center">Options</th>
-        </tr>
-        <% @articles.each do |article| %>
-        <tr>
-          <td><%= link_to article.title, article_path(article) %></td>
-          <td><%= article.text %></td>
-          <td style="text-align: center"><%= link_to 'Edit', edit_article_path(article) %>&nbsp;
-            <%= link_to 'Delete', article_path(article),
+<div class="col-6">
+  <p><%= link_to 'New Article', new_article_path %></p>
+  <div class="table-responsive">
+    <table class="table">
+      <tr>
+        <th>Title</th>
+        <th>Text</th>
+        <th style="text-align: center">Options</th>
+      </tr>
+      <% @articles.each do |article| %>
+      <tr>
+        <td><%= link_to article.title, article_path(article) %></td>
+        <td class="article-table-text-col"><%= article.text %></td>
+        <td style="text-align: center"><%= link_to 'Edit', edit_article_path(article) %>&nbsp;
+          <%= link_to 'Delete', article_path(article),
             method: :delete,
             data: { confirm: 'Are you sure?' } %></td>
-        </tr>
-        <% end %>
-      </table>
-    </div>
+      </tr>
+      <% end %>
+    </table>
   </div>
 </div>
