article table text column now overflows ellipsis

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,10 @@
  */
 
 @import "bootstrap";
+
+.article-table-text-col {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  max-width: 200px;
+}
