--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,12 +2,14 @@
 <div class="col-6">
   <p><%= link_to 'New Article', new_article_path %></p>
   <div class="table-responsive">
-    <table class="table">
-      <tr>
-        <th>Title</th>
-        <th>Text</th>
-        <th style="text-align: center">Options</th>
-      </tr>
+    <table class="table table-hover">
+      <thead class="thead-light">
+        <tr>
+          <th>Title</th>
+          <th>Text</th>
+          <th style="text-align: center">Options</th>
+        </tr>
+      </thead>
       <% @articles.each do |article| %>
       <tr>
         <td><%= link_to article.title, article_path(article) %></td>
