--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
-<div class="container-fluid">
+<div class="container-fluid" style="padding-bottom: 30px;">
 
   <body>
     <% if notice %>
