--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,12 @@
-  <div class="row">
-    <div class="col-md-4">
-      <p>
-        <strong>Title:</strong>
+<div class="jumbotron">
+      <h1>
+        <!-- <strong>Title:</strong> -->
         <%= @article.title %>
-      </p>
-      <p>
+      </h1>
+      </div>
+      <div class="row">
+    <div class="col-md-4">
+      <p class="text-center" style="border: 1px solid lightgrey">
         <strong>Text:</strong>
         <%= @article.text %>
       </p>
