--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Library</title>
   <%= csrf_meta_tags %>
@@ -8,10 +9,22 @@
   <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
 </head>
 
-<div class="container-fluid">
+<div>
+    <% if notice %>
+    <p class="alert alert-success"><%= notice %></p>
+    <% end %>
+    <% if alert %>
+    <p class="alert alert-danger"><%= alert %></p>
+    <% end %>
+</div>
 
 <%= render 'layouts/nav_header' %>
-<%= yield %>
+
+<div class="container-fluid">
+
+  <body>
+    <%= yield %>
+  </body>
 
 </div>
 
