--- a/app/views/layouts/_nav_header.html.erb
+++ b/app/views/layouts/_nav_header.html.erb
@@ -16,12 +16,12 @@
             <li class="nav-item">
                 <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'nav-link' %>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">Link</a>
-            </li>
+            </li> -->
             <% else %>
             <li class="nav-item">
                 <%= link_to "Sign up", new_user_registration_path, :class => 'nav-link' %>
