--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,5 +22,5 @@
       <% end %>
     </table>
   </div>
-  <p style="color: green;"><%= link_to 'Back to Home', welcome_index_path %></p>
+  <%= link_to 'Back to Home', welcome_index_path %>
 </div>
