--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,3 @@
 <h1 class="jumbotron">Blog World</h1>
-<%= link_to 'Enter My Blog World', controller: 'articles' %> |
-<%= link_to 'Start New Blog', new_article_path %>
+
+<%= link_to 'Start New Blog', new_blog_path %>
