--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -2,6 +2,6 @@
     <div class="col-md-4">
       <h3>Give your new blog a title</h1>
       <%= render 'form' %>
-     
+      <%= link_to 'Back', welcome_index_path %>
     </div>
   </div>
